# yolov12-cpp-onnx

./: CMakeLists.txt  README.md
include/: logger.h  safe_queue.h  utils.h  yolov12.h
src/: logger.cpp  main.cpp  utils.cpp  yolov12.cpp
